<resources>
    <string name="app_name">MyApp</string>

    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="reset">Reset</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>

    <string name="empty_field_message">This field can not be empty</string>

    <string name="required_camera_permission">Application needs permission to access your camera</string>
    <string name="required_location_permission">Application needs permission to get your location</string>
    <string name="required_write_to_storage_permission">Application needs permission to write at disc</string>
    <string name="reject_permission">Never show</string>
    <string name="permission_required">Requires permission</string>

    <string name="dialog_camera">Camera</string>
    <string name="dialog_galary">Galary</string>
    <string name="dialog_remove">Remove</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>

    <string name="forgot_pass">Forgot password?</string>

    <string name="title_events">Events</string>
    <string name="title_friends">Friends</string>
    <string name="title_chats">Chats</string>
    <string name="title_games">Games</string>
    <string name="title_settings">Settings</string>

    <string name="loading">Loading...</string>

    <string name="edit_profile">Edit Profile</string>

    <string name="notification">Notifications</string>
    <string name="appearance">Appearance</string>
    <string name="bug_report">Bug</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>

    <string name="done">Done</string>
    <string name="bio">Bio</string>
    <string name="logout">Log Out</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="username">Username</string>


    <string name="edit_profile_tooltip_1">Choose or Change Image</string>
    <string name="edit_profile_tooltip_2">Please enter your real name</string>
    <string name="edit_profile_tooltip_3">Show current location for friends</string>
    <string name="edit_profile_tooltip_4">Describe yourself (hobbies, profession, age)</string>

    <string name="general_minimumlengthis">Minimum length is</string>
    <string name="general_maximumlengthis">Maximum length is</string>

    <string name="friends_tab_fragmet_title">Friends</string>
    <string name="requests_tab_fragmet_title">Requests</string>
    <string name="sent_tab_fragmet_title">Sent</string>

</resources>
