<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.sing_in.SignInActivity"
        android:background="@color/dark"
        android:padding="32dp">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CommonTextInputLayout"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ti_sign_in_pass">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CommonTextInputEditText"
                android:hint="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/et_sign_in_pass"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_sign_in_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CommonTextInputLayout"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_in">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_sign_in_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CommonTextInputEditText"
                android:inputType="textPassword"
                android:hint="@string/pass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_sing_up"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CommonButtonStyle"
            android:text="@string/sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>